<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Cancel</string>
    <string name="CompareButton">Compare</string>
    <string name="PerformAnotherComparisonButton">Perform Another Comparison</string>
    <string name="MainMenuTitle">Main Menu</string>
    <string name="MainMenuCurrentJobButton">Current Job</string>
    <string name="MainMenuJobOfferButton">Job Offer</string>
    <string name="MainMenuComparisonSettingsButton">Comparison Settings</string>
    <string name="MainMenuCompareJobsButton">Compare Jobs</string>
    <string name="CurrentJobTitle">Current Job</string>
    <string name="JobOfferTitle">Job Offer</string>
    <string name="JobOfferUtilTitle">Job Offer Utility</string>
    <string name="ComparisonSettingsTitle">Comparison Settings</string>
    <string name="CompareJobsTitle">Compare Jobs</string>
    <string name="Title">Title</string>
    <string name="RemoteWorkTime">Remote Work Time</string>
    <string name="LeaveTime">Leave Time</string>
    <string name="YearlyBonus">Yearly Bonus</string>
    <string name="YearlySalary">Yearly Salary</string>
    <string name="Company">Company</string>
    <string name="Location">Location</string>
    <string name="CostOfLivingIndex">Cost of Living Index</string>
    <string name="RetirementBenefits">Retirement Benefits</string>
    <string name="CompanyHint">Enter Company Name</string>
    <string name="TitleHint">Enter Job Title</string>
    <string name="LocationHint">Enter City and State</string>
    <string name="CostOfLivingIndexHint">Enter an Integer Index</string>
    <string name="RemoteWorkTimeHint">Enter Number of Days Per Week</string>
    <string name="YearlySalaryHint">Enter Yearly Salary</string>
    <string name="YearlyBonusHint">Enter Yearly Bonus</string>
    <string name="RetirementBenefitsHint">Enter Matched Percentage</string>
    <string name="LeaveTimeHint">Enter Number of Days Per Year</string>
    <string name="AddAnotherOffer">Add Another Offer</string>
    <string name="CompareWithCurrentJob">Compare With Current Job</string>
    <string name="ReturnToMainMenu">Return to Main Menu</string>
    <string name="WeightOfRemoteWorkTime">Weight of Remote Work Time</string>
    <string name="RWTWeight">Remote Work Time Weight</string>
    <string name="InitialWeight">1</string>
    <string name="AYSWeight">Yearly Salary Weight</string>
    <string name="AYBWeight">Yearly Bonus Weight</string>
    <string name="WeightOfYearlySalary">Weight of Yearly Salary</string>
    <string name="WeightOfYearlyBonus">Weight of Yearly Bonus</string>
    <string name="RBPWeight">Retirement Benefits Weight</string>
    <string name="WeightOfRetirementBenefits">Weight of Retirement Benefits</string>
    <string name="LTWeight">Leave Time Weight</string>
    <string name="WeightOfLeaveTime">Weight of Leave Time</string>
    <string name="ComparisonResultTitle">Comparison Result</string>
    <string name="AdjustedYearlySalary">Adjusted Yearly Salary</string>
    <string name="AdjustedYearlyBonus">Adjusted Yearly Bonus</string>
    <string name="PlaceholderTitle1">Title1</string>
    <string name="PlaceholderTitle2">Title2</string>
    <string name="PlaceholderCompany1">Company1</string>
    <string name="PlaceholderCompany2">Company2</string>
    <string name="PlaceholderLocation1">Location1</string>
    <string name="PlaceholderLocation2">Location2</string>
    <string name="PlaceholderAYS1">AYS1</string>
    <string name="PlaceholderAYS2">AYS2</string>
    <string name="PlaceholderAYB1">AYB1</string>
    <string name="PlaceholderAYB2">AYB2</string>
    <string name="PlaceholderRBP1">RBP1</string>
    <string name="PlaceholderRBP2">RBP2</string>
    <string name="PlaceholderLT1">LT1</string>
    <string name="PlaceholderLT2">LT2</string>
    <string name="Score">Score</string>
    <string name="Rank">Rank</string>
    <string name="CheckBox">CheckBox</string>
    <string name="done">done</string>
</resources>