<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComparisonResult">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/ComparisonResultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/ComparisonResultTitle"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/Title"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultTitle1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderTitle1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultTitle2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderTitle2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/Company"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultCompany1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderCompany1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultCompany2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderCompany2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/Location"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultLocation1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderLocation1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultLocation2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderLocation2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/AdjustedYearlySalary"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultAdjustedYearlySalary1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderAYS1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultAdjustedYearlySalary2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderAYS2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/AdjustedYearlyBonus"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultAdjustedYearlyBonus1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderAYB1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultAdjustedYearlyBonus2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderAYB2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/RetirementBenefits"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultRetirementBenefitsPercentage1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderRBP1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultRetirementBenefitsPercentage2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderRBP2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/LeaveTime"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultLeaveTime1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderLT1"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ComparisonResultLeaveTime2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:padding="10dip"
                android:text="@string/PlaceholderLT2"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/ComparisonResultPerformAnotherComparisonButton"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:text="@string/PerformAnotherComparisonButton"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ComparisonResultReturnMainMenuButton" />

    <Button
        android:id="@+id/ComparisonResultReturnMainMenuButton"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:text="@string/ReturnToMainMenu"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toEndOf="@id/ComparisonResultPerformAnotherComparisonButton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>